# LiftBit

./: .gitignore  README.md  docker-compose.yaml  upload_file.sh
analytics/: streaming_processing.py  submit-job.sh
files-ms/: Dockerfile  analytics.py  main.py  requirements.txt
kafka-setuper/: init.sh
login-ms/: Dockerfile  main.py  requirements.txt
metadata-db-setuper/: setup_metadata_db.sh
metadata-ms/: cassandra_client.py  main.py  requirements.txt
metadata-ms/cql/: create_schema.cql
nginx/: default.conf
storage-ms/: .gitignore  Cargo.toml  Dockerfile
storage-ms/src/: error.rs  main.rs  s3-service-lib.rs
