[package]
name = "storage-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s3_service"
path = "src/s3-service-lib.rs"

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.2"
aws-sdk-s3 = "0.27.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
uuid = "1.3.2"
mime_guess = "2"
thiserror = "1.0"
